delete a source
